<resources>
    <string name="app_name">MyCat</string>

    <dimen name="font_size_16">16</dimen>
    <dimen name="distance_size_50">50</dimen>
    <dimen name="distance_size_8">8</dimen>
    <dimen name="distance_size_split_line">2dp</dimen>

    <declare-styleable name="IndexBottomLayout"  >
        <attr name="bigIconSrc" format="reference" />
        <attr name="smallIconSrc" format="reference" />
        <attr name="iconWidth" format="dimension" />
        <attr name="iconHeight" format="dimension" />
        <attr name="range" format="float" />
        <attr name="title" format="string" />
    </declare-styleable>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Author affiliation：xp134525@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loading">正在加载</string>

    <!--ListSlideView-->
    <string name="listSlideView_top">"置顶</string>
    <string name="listSlideView_unTop">取消置顶</string>
    <string name="listSlideView_markUnread">标记未读</string>
    <string name="listSlideView_markRead">标记已读</string>
    <string name="listSlideView_delete">删除</string>
    
    
    <!--time util-->
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>

    <!--last message style-->
    <string name="last_msg_image">[图片]</string>
    <string name="last_msg_file">[文件]</string>
    <string name="last_msg_voice">[录音]</string>
    <string name="last_msg_movie">[视频]</string>
    <string name="last_msg_location">[位置]</string>
    <string name="last_msg_custom">[未知信息]</string>


    <!--inviitation data-->
    <string name="invitation_accept">接受</string>
    <string name="invitation_refused">拒绝</string>
    <string name="invitation_has_accept">已接受</string>
    <string name="invitation_has_refused">已拒绝</string>
    <string name="invitation_wait_process">待验证</string>
    <string name="invitation_delte">删除</string>
    <string name="invitation_be_rejected">被拒绝</string>
    <string name="invitation_be_aggree">已同意</string>
    <string name="invitation_be_process">待处理</string>


    <!--chat msg type-->
    <string name="chat_msg_type_album">相册</string>
    <string name="chat_msg_type_photo">相机</string>
    <string name="chat_msg_type_business">名片</string>
    <string name="chat_msg_type_position">位置</string>
    <string name="chat_msg_type_gif">摄像</string>
    <string name="chat_msg_type_file">文件</string>


    <!--chat msg process-->
    <string name="chat_msg_process_copy">复制</string>
    <string name="chat_msg_process_delete">删除</string>
    <string name="chat_msg_process_withdraw">撤回</string>
    <string name="chat_msg_process_forwarding">转发</string>


    <!--bottom dialog for delete friend-->
    <string name="chat_friend_delete_tip">同时会屏蔽对方的临时会话，不再接收此人的消息</string>
    <string name="chat_friend_delete_delte">删除</string>
    <string name="chat_friend_delete_cancle">取消</string>


    <!--send file-->
    <string name="sendfile_document">文档</string>
    <string name="sendfile_image">图片</string>
    <string name="sendfile_music">音频</string>
    <string name="sendfile_video">视频</string>
    <string name="sendfile_apk">应用</string>
    <string name="sendfile_other">其他</string>

    <string name="sendfile_limit_filecount">选中的文件最多不超过五个</string>
    <string name="sendfile_limit_filesize">所选的文件大小总和不能超过10M</string>
    <string name="sendfile_limit_atleastone">至少选中一个文件后才能发送</string>

    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="sdcard_in_scanning">正在扫描存储</string>

    <string name="sendfile_file_not_found">文件丢失，请重新尝试</string>
    <string name="sendfile_file_unexception_error">发送文件时，发生未知错误</string>



</resources>
