<?xml version="1.0" encoding="utf-8"?>
<com.example.xkfeng.mycat.DrawableView.SendFileView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sfv_sendFileView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_gradient"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tv_setBackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_back_white_16"
            android:drawablePadding="2dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="文件"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_titleLayout"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_file_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_document"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_image_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_image"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_music_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_music"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_video_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_video"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_apk_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_apk"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/actionbar_other_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#fff"
                android:text="@string/sendfile_other"
                android:textColor="@color/send_file_action_bar" />

            <ImageView
                android:id="@+id/slipping_6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/slipping"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.33dp"
                android:background="#D9D9D9" />
        </LinearLayout>

    </LinearLayout>

    <com.example.xkfeng.mycat.DrawableView.ScrollControllViewPager
        android:id="@+id/scv_viewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_actionbar"
        android:layout_above="@id/rl_sendFileLayout"
        >


    </com.example.xkfeng.mycat.DrawableView.ScrollControllViewPager>
    <RelativeLayout
        android:id="@+id/rl_sendFileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F9FA"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/tv_totalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="10dp"
            android:text="0 KB"
            android:textColor="@color/transparent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(0)发送"
            android:layout_alignParentRight="true"
            android:textColor="#FFFFFF"
            android:background="@color/light_blue"
            android:layout_margin="10dp"
            />
    </RelativeLayout>

</com.example.xkfeng.mycat.DrawableView.SendFileView>
